Programming Language/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> firstQuadruple clases scopeGlobal vars funciones PROGRAMA scopePrograma bloque
Rule 2     firstQuadruple -> <empty>
Rule 3     clases -> clase clases
Rule 4     clases -> <empty>
Rule 5     scopeGlobal -> <empty>
Rule 6     scopePrograma -> <empty>
Rule 7     vars -> var vars
Rule 8     vars -> <empty>
Rule 9     funciones -> funcion funciones
Rule 10    funciones -> <empty>
Rule 11    var -> tipo varNombre varsVector var2 ;
Rule 12    varsVector -> [ CTE_ENTERO ]
Rule 13    varsVector -> <empty>
Rule 14    var2 -> , varNombre varsVector var2
Rule 15    var2 -> <empty>
Rule 16    varNombre -> ID
Rule 17    funcion -> FUNCION tipo nombreFuncion ( metodo2 agregaFirma bloque
Rule 18    nombreFuncion -> ID
Rule 19    agregaFirma -> )
Rule 20    tipo -> ENTERO
Rule 21    tipo -> FLOTANTE
Rule 22    tipo -> TEXTO
Rule 23    tipo -> BOLEANO
Rule 24    tipo -> checkClassExistance
Rule 25    tipo -> VACIO
Rule 26    checkClassExistance -> ID
Rule 27    bloque -> { bloque1 }
Rule 28    bloque1 -> estatuto bloque1
Rule 29    bloque1 -> <empty>
Rule 30    estatuto -> catchIdAsignacionOrLlamadaFunc asignacionOrLlamadaFunc
Rule 31    estatuto -> condicion
Rule 32    estatuto -> escritura
Rule 33    estatuto -> ciclowhile
Rule 34    estatuto -> lectura
Rule 35    estatuto -> var
Rule 36    estatuto -> metodo5
Rule 37    catchIdAsignacionOrLlamadaFunc -> ID nextIde
Rule 38    nextIde -> . ID
Rule 39    nextIde -> <empty>
Rule 40    asignacionOrLlamadaFunc -> llamadaFuncion
Rule 41    asignacionOrLlamadaFunc -> asignacion
Rule 42    llamadaFuncion -> verificarProc parametrosLlamada ) ;
Rule 43    verificarProc -> (
Rule 44    parametrosLlamada -> expresion parametrosLlamada2
Rule 45    parametrosLlamada -> <empty>
Rule 46    parametrosLlamada2 -> , expresion parametrosLlamada2
Rule 47    parametrosLlamada2 -> <empty>
Rule 48    asignacion -> revisaQueExistaID asignacion1 = expresion ;
Rule 49    revisaQueExistaID -> <empty>
Rule 50    asignacion1 -> vectorAsignacion
Rule 51    asignacion1 -> <empty>
Rule 52    vectorAsignacion -> [ exp ]
Rule 53    escritura -> escrituraType ( expresion ) ;
Rule 54    escrituraType -> IMPRIMIR
Rule 55    escrituraType -> IMPRIMIRSALTO
Rule 56    condicion -> SI ( superexpresion leftParentesisCondicion bloque condicion1
Rule 57    leftParentesisCondicion -> )
Rule 58    condicion1 -> sinoCondicion bloque
Rule 59    condicion1 -> <empty>
Rule 60    sinoCondicion -> SINO
Rule 61    lectura -> LEER ( revisaQueExistaID ) ;
Rule 62    ciclowhile -> MIENTRAS parentesisIzqWhile superexpresion parentesisDerWhile bloque
Rule 63    parentesisIzqWhile -> (
Rule 64    parentesisDerWhile -> )
Rule 65    superexpresion -> expresion checaSuperExpresion superexpresion1
Rule 66    checaSuperExpresion -> <empty>
Rule 67    superexpresion1 -> operationSuperExpresion superexpresion
Rule 68    superexpresion1 -> <empty>
Rule 69    operationSuperExpresion -> Y
Rule 70    operationSuperExpresion -> O
Rule 71    expresion -> exp expresion1
Rule 72    expresion1 -> > exp
Rule 73    expresion1 -> GE exp
Rule 74    expresion1 -> < exp
Rule 75    expresion1 -> LE exp
Rule 76    expresion1 -> NEQ exp
Rule 77    expresion1 -> EQ exp
Rule 78    expresion1 -> <empty>
Rule 79    exp -> termino checaExp exp1
Rule 80    checaExp -> <empty>
Rule 81    exp1 -> operationExp exp
Rule 82    exp1 -> <empty>
Rule 83    operationExp -> +
Rule 84    operationExp -> -
Rule 85    termino -> factor checaTermino termino1
Rule 86    termino1 -> operationTermino termino
Rule 87    termino1 -> <empty>
Rule 88    checaTermino -> <empty>
Rule 89    operationTermino -> *
Rule 90    operationTermino -> /
Rule 91    operationTermino -> %
Rule 92    factor -> parentesisIzq superexpresion parentesisDer
Rule 93    factor -> operationFactor varcte
Rule 94    factor -> varcte
Rule 95    parentesisIzq -> (
Rule 96    parentesisDer -> )
Rule 97    operationFactor -> +
Rule 98    operationFactor -> -
Rule 99    varcte -> varcteID
Rule 100   varcte -> constantes
Rule 101   varcte -> NULO
Rule 102   constantes -> CTE_ENTERO
Rule 103   constantes -> CTE_FLOTANTE
Rule 104   constantes -> CTE_TEXTO
Rule 105   constantes -> VERDADERO
Rule 106   constantes -> FALSO
Rule 107   varcteID -> guardarVarcteId varct
Rule 108   guardarVarcteId -> ID
Rule 109   varct -> varcte1
Rule 110   varct -> varcte2
Rule 111   varct -> vectorExp
Rule 112   varct -> <empty>
Rule 113   varcte1 -> . ID
Rule 114   vectorExp -> corcheteIzq saveTempNombreVector exp corcheteDer
Rule 115   saveTempNombreVector -> <empty>
Rule 116   corcheteIzq -> [
Rule 117   corcheteDer -> ]
Rule 118   varcte2 -> parentesisIzq saveTempNombreFunc varcte3 parentesisDer
Rule 119   saveTempNombreFunc -> <empty>
Rule 120   varcte3 -> exp varcte4
Rule 121   varcte3 -> <empty>
Rule 122   varcte4 -> , exp varcte4
Rule 123   varcte4 -> <empty>
Rule 124   clase -> CLASE nombreClase clase1 { public } ;
Rule 125   nombreClase -> ID
Rule 126   clase1 -> : ID
Rule 127   clase1 -> <empty>
Rule 128   public -> PUBLICO : vars funciones
Rule 129   public -> <empty>
Rule 130   metodo2 -> tipo nombreParametro metodo21
Rule 131   metodo2 -> <empty>
Rule 132   metodo21 -> , tipo nombreParametro metodo21
Rule 133   metodo21 -> <empty>
Rule 134   nombreParametro -> ID
Rule 135   metodo5 -> REGRESA expresion ;

Terminals, with rules where they appear

%                    : 91
(                    : 17 43 53 56 61 63 95
)                    : 19 42 53 57 61 64 96
*                    : 89
+                    : 83 97
,                    : 14 46 122 132
-                    : 84 98
.                    : 38 113
/                    : 90
:                    : 126 128
;                    : 11 42 48 53 61 124 135
<                    : 74
=                    : 48
>                    : 72
BOLEANO              : 23
CLASE                : 124
CTE_ENTERO           : 12 102
CTE_FLOTANTE         : 103
CTE_TEXTO            : 104
ENTERO               : 20
EQ                   : 77
FALSO                : 106
FLOTANTE             : 21
FUNCION              : 17
GE                   : 73
ID                   : 16 18 26 37 38 108 113 125 126 134
IMPRIMIR             : 54
IMPRIMIRSALTO        : 55
LE                   : 75
LEER                 : 61
MIENTRAS             : 62
NEQ                  : 76
NULO                 : 101
O                    : 70
PROGRAMA             : 1
PUBLICO              : 128
REGRESA              : 135
SI                   : 56
SINO                 : 60
TEXTO                : 22
VACIO                : 25
VERDADERO            : 105
Y                    : 69
[                    : 12 52 116
]                    : 12 52 117
error                : 
{                    : 27 124
}                    : 27 124

Nonterminals, with rules where they appear

agregaFirma          : 17
asignacion           : 41
asignacion1          : 48
asignacionOrLlamadaFunc : 30
bloque               : 1 17 56 58 62
bloque1              : 27 28
catchIdAsignacionOrLlamadaFunc : 30
checaExp             : 79
checaSuperExpresion  : 65
checaTermino         : 85
checkClassExistance  : 24
ciclowhile           : 33
clase                : 3
clase1               : 124
clases               : 1 3
condicion            : 31
condicion1           : 56
constantes           : 100
corcheteDer          : 114
corcheteIzq          : 114
escritura            : 32
escrituraType        : 53
estatuto             : 28
exp                  : 52 71 72 73 74 75 76 77 81 114 120 122
exp1                 : 79
expresion            : 44 46 48 53 65 135
expresion1           : 71
factor               : 85
firstQuadruple       : 1
funcion              : 9
funciones            : 1 9 128
guardarVarcteId      : 107
lectura              : 34
leftParentesisCondicion : 56
llamadaFuncion       : 40
metodo2              : 17
metodo21             : 130 132
metodo5              : 36
nextIde              : 37
nombreClase          : 124
nombreFuncion        : 17
nombreParametro      : 130 132
operationExp         : 81
operationFactor      : 93
operationSuperExpresion : 67
operationTermino     : 86
parametrosLlamada    : 42
parametrosLlamada2   : 44 46
parentesisDer        : 92 118
parentesisDerWhile   : 62
parentesisIzq        : 92 118
parentesisIzqWhile   : 62
programa             : 0
public               : 124
revisaQueExistaID    : 48 61
saveTempNombreFunc   : 118
saveTempNombreVector : 114
scopeGlobal          : 1
scopePrograma        : 1
sinoCondicion        : 58
superexpresion       : 56 62 67 92
superexpresion1      : 65
termino              : 79 86
termino1             : 85
tipo                 : 11 17 130 132
var                  : 7 35
var2                 : 11 14
varNombre            : 11 14
varct                : 107
varcte               : 93 94
varcte1              : 109
varcte2              : 110
varcte3              : 118
varcte4              : 120 122
varcteID             : 99
vars                 : 1 7 128
varsVector           : 11 14
vectorAsignacion     : 50
vectorExp            : 111
verificarProc        : 42

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . firstQuadruple clases scopeGlobal vars funciones PROGRAMA scopePrograma bloque
    (2) firstQuadruple -> .

    CLASE           reduce using rule 2 (firstQuadruple -> .)
    ENTERO          reduce using rule 2 (firstQuadruple -> .)
    FLOTANTE        reduce using rule 2 (firstQuadruple -> .)
    TEXTO           reduce using rule 2 (firstQuadruple -> .)
    BOLEANO         reduce using rule 2 (firstQuadruple -> .)
    VACIO           reduce using rule 2 (firstQuadruple -> .)
    ID              reduce using rule 2 (firstQuadruple -> .)
    FUNCION         reduce using rule 2 (firstQuadruple -> .)
    PROGRAMA        reduce using rule 2 (firstQuadruple -> .)

    firstQuadruple                 shift and go to state 1
    programa                       shift and go to state 2

state 1

    (1) programa -> firstQuadruple . clases scopeGlobal vars funciones PROGRAMA scopePrograma bloque
    (3) clases -> . clase clases
    (4) clases -> .
    (124) clase -> . CLASE nombreClase clase1 { public } ;

    ENTERO          reduce using rule 4 (clases -> .)
    FLOTANTE        reduce using rule 4 (clases -> .)
    TEXTO           reduce using rule 4 (clases -> .)
    BOLEANO         reduce using rule 4 (clases -> .)
    VACIO           reduce using rule 4 (clases -> .)
    ID              reduce using rule 4 (clases -> .)
    FUNCION         reduce using rule 4 (clases -> .)
    PROGRAMA        reduce using rule 4 (clases -> .)
    CLASE           shift and go to state 5

    clases                         shift and go to state 3
    clase                          shift and go to state 4

state 2

    (0) S' -> programa .



state 3

    (1) programa -> firstQuadruple clases . scopeGlobal vars funciones PROGRAMA scopePrograma bloque
    (5) scopeGlobal -> .

    ENTERO          reduce using rule 5 (scopeGlobal -> .)
    FLOTANTE        reduce using rule 5 (scopeGlobal -> .)
    TEXTO           reduce using rule 5 (scopeGlobal -> .)
    BOLEANO         reduce using rule 5 (scopeGlobal -> .)
    VACIO           reduce using rule 5 (scopeGlobal -> .)
    ID              reduce using rule 5 (scopeGlobal -> .)
    FUNCION         reduce using rule 5 (scopeGlobal -> .)
    PROGRAMA        reduce using rule 5 (scopeGlobal -> .)

    scopeGlobal                    shift and go to state 6

state 4

    (3) clases -> clase . clases
    (3) clases -> . clase clases
    (4) clases -> .
    (124) clase -> . CLASE nombreClase clase1 { public } ;

    ENTERO          reduce using rule 4 (clases -> .)
    FLOTANTE        reduce using rule 4 (clases -> .)
    TEXTO           reduce using rule 4 (clases -> .)
    BOLEANO         reduce using rule 4 (clases -> .)
    VACIO           reduce using rule 4 (clases -> .)
    ID              reduce using rule 4 (clases -> .)
    FUNCION         reduce using rule 4 (clases -> .)
    PROGRAMA        reduce using rule 4 (clases -> .)
    CLASE           shift and go to state 5

    clase                          shift and go to state 4
    clases                         shift and go to state 7

state 5

    (124) clase -> CLASE . nombreClase clase1 { public } ;
    (125) nombreClase -> . ID

    ID              shift and go to state 9

    nombreClase                    shift and go to state 8

state 6

    (1) programa -> firstQuadruple clases scopeGlobal . vars funciones PROGRAMA scopePrograma bloque
    (7) vars -> . var vars
    (8) vars -> .
    (11) var -> . tipo varNombre varsVector var2 ;
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    FUNCION         reduce using rule 8 (vars -> .)
    PROGRAMA        reduce using rule 8 (vars -> .)
    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14
    ID              shift and go to state 13

    vars                           shift and go to state 10
    tipo                           shift and go to state 11
    checkClassExistance            shift and go to state 15
    var                            shift and go to state 17

state 7

    (3) clases -> clase clases .

    ENTERO          reduce using rule 3 (clases -> clase clases .)
    FLOTANTE        reduce using rule 3 (clases -> clase clases .)
    TEXTO           reduce using rule 3 (clases -> clase clases .)
    BOLEANO         reduce using rule 3 (clases -> clase clases .)
    VACIO           reduce using rule 3 (clases -> clase clases .)
    ID              reduce using rule 3 (clases -> clase clases .)
    FUNCION         reduce using rule 3 (clases -> clase clases .)
    PROGRAMA        reduce using rule 3 (clases -> clase clases .)


state 8

    (124) clase -> CLASE nombreClase . clase1 { public } ;
    (126) clase1 -> . : ID
    (127) clase1 -> .

    :               shift and go to state 20
    {               reduce using rule 127 (clase1 -> .)

    clase1                         shift and go to state 21

state 9

    (125) nombreClase -> ID .

    :               reduce using rule 125 (nombreClase -> ID .)
    {               reduce using rule 125 (nombreClase -> ID .)


state 10

    (1) programa -> firstQuadruple clases scopeGlobal vars . funciones PROGRAMA scopePrograma bloque
    (9) funciones -> . funcion funciones
    (10) funciones -> .
    (17) funcion -> . FUNCION tipo nombreFuncion ( metodo2 agregaFirma bloque

    PROGRAMA        reduce using rule 10 (funciones -> .)
    FUNCION         shift and go to state 23

    funciones                      shift and go to state 22
    funcion                        shift and go to state 24

state 11

    (11) var -> tipo . varNombre varsVector var2 ;
    (16) varNombre -> . ID

    ID              shift and go to state 26

    varNombre                      shift and go to state 25

state 12

    (20) tipo -> ENTERO .

    ID              reduce using rule 20 (tipo -> ENTERO .)


state 13

    (26) checkClassExistance -> ID .

    ID              reduce using rule 26 (checkClassExistance -> ID .)


state 14

    (25) tipo -> VACIO .

    ID              reduce using rule 25 (tipo -> VACIO .)


state 15

    (24) tipo -> checkClassExistance .

    ID              reduce using rule 24 (tipo -> checkClassExistance .)


state 16

    (23) tipo -> BOLEANO .

    ID              reduce using rule 23 (tipo -> BOLEANO .)


state 17

    (7) vars -> var . vars
    (7) vars -> . var vars
    (8) vars -> .
    (11) var -> . tipo varNombre varsVector var2 ;
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    FUNCION         reduce using rule 8 (vars -> .)
    PROGRAMA        reduce using rule 8 (vars -> .)
    }               reduce using rule 8 (vars -> .)
    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14
    ID              shift and go to state 13

    vars                           shift and go to state 27
    tipo                           shift and go to state 11
    checkClassExistance            shift and go to state 15
    var                            shift and go to state 17

state 18

    (21) tipo -> FLOTANTE .

    ID              reduce using rule 21 (tipo -> FLOTANTE .)


state 19

    (22) tipo -> TEXTO .

    ID              reduce using rule 22 (tipo -> TEXTO .)


state 20

    (126) clase1 -> : . ID

    ID              shift and go to state 28


state 21

    (124) clase -> CLASE nombreClase clase1 . { public } ;

    {               shift and go to state 29


state 22

    (1) programa -> firstQuadruple clases scopeGlobal vars funciones . PROGRAMA scopePrograma bloque

    PROGRAMA        shift and go to state 30


state 23

    (17) funcion -> FUNCION . tipo nombreFuncion ( metodo2 agregaFirma bloque
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14
    ID              shift and go to state 13

    tipo                           shift and go to state 31
    checkClassExistance            shift and go to state 15

state 24

    (9) funciones -> funcion . funciones
    (9) funciones -> . funcion funciones
    (10) funciones -> .
    (17) funcion -> . FUNCION tipo nombreFuncion ( metodo2 agregaFirma bloque

    PROGRAMA        reduce using rule 10 (funciones -> .)
    }               reduce using rule 10 (funciones -> .)
    FUNCION         shift and go to state 23

    funcion                        shift and go to state 24
    funciones                      shift and go to state 32

state 25

    (11) var -> tipo varNombre . varsVector var2 ;
    (12) varsVector -> . [ CTE_ENTERO ]
    (13) varsVector -> .

    [               shift and go to state 33
    ,               reduce using rule 13 (varsVector -> .)
    ;               reduce using rule 13 (varsVector -> .)

    varsVector                     shift and go to state 34

state 26

    (16) varNombre -> ID .

    [               reduce using rule 16 (varNombre -> ID .)
    ,               reduce using rule 16 (varNombre -> ID .)
    ;               reduce using rule 16 (varNombre -> ID .)


state 27

    (7) vars -> var vars .

    FUNCION         reduce using rule 7 (vars -> var vars .)
    }               reduce using rule 7 (vars -> var vars .)
    PROGRAMA        reduce using rule 7 (vars -> var vars .)


state 28

    (126) clase1 -> : ID .

    {               reduce using rule 126 (clase1 -> : ID .)


state 29

    (124) clase -> CLASE nombreClase clase1 { . public } ;
    (128) public -> . PUBLICO : vars funciones
    (129) public -> .

    PUBLICO         shift and go to state 36
    }               reduce using rule 129 (public -> .)

    public                         shift and go to state 35

state 30

    (1) programa -> firstQuadruple clases scopeGlobal vars funciones PROGRAMA . scopePrograma bloque
    (6) scopePrograma -> .

    {               reduce using rule 6 (scopePrograma -> .)

    scopePrograma                  shift and go to state 37

state 31

    (17) funcion -> FUNCION tipo . nombreFuncion ( metodo2 agregaFirma bloque
    (18) nombreFuncion -> . ID

    ID              shift and go to state 39

    nombreFuncion                  shift and go to state 38

state 32

    (9) funciones -> funcion funciones .

    }               reduce using rule 9 (funciones -> funcion funciones .)
    PROGRAMA        reduce using rule 9 (funciones -> funcion funciones .)


state 33

    (12) varsVector -> [ . CTE_ENTERO ]

    CTE_ENTERO      shift and go to state 40


state 34

    (11) var -> tipo varNombre varsVector . var2 ;
    (14) var2 -> . , varNombre varsVector var2
    (15) var2 -> .

    ,               shift and go to state 41
    ;               reduce using rule 15 (var2 -> .)

    var2                           shift and go to state 42

state 35

    (124) clase -> CLASE nombreClase clase1 { public . } ;

    }               shift and go to state 43


state 36

    (128) public -> PUBLICO . : vars funciones

    :               shift and go to state 44


state 37

    (1) programa -> firstQuadruple clases scopeGlobal vars funciones PROGRAMA scopePrograma . bloque
    (27) bloque -> . { bloque1 }

    {               shift and go to state 45

    bloque                         shift and go to state 46

state 38

    (17) funcion -> FUNCION tipo nombreFuncion . ( metodo2 agregaFirma bloque

    (               shift and go to state 47


state 39

    (18) nombreFuncion -> ID .

    (               reduce using rule 18 (nombreFuncion -> ID .)


state 40

    (12) varsVector -> [ CTE_ENTERO . ]

    ]               shift and go to state 48


state 41

    (14) var2 -> , . varNombre varsVector var2
    (16) varNombre -> . ID

    ID              shift and go to state 26

    varNombre                      shift and go to state 49

state 42

    (11) var -> tipo varNombre varsVector var2 . ;

    ;               shift and go to state 50


state 43

    (124) clase -> CLASE nombreClase clase1 { public } . ;

    ;               shift and go to state 51


state 44

    (128) public -> PUBLICO : . vars funciones
    (7) vars -> . var vars
    (8) vars -> .
    (11) var -> . tipo varNombre varsVector var2 ;
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    FUNCION         reduce using rule 8 (vars -> .)
    }               reduce using rule 8 (vars -> .)
    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14
    ID              shift and go to state 13

    vars                           shift and go to state 52
    tipo                           shift and go to state 11
    checkClassExistance            shift and go to state 15
    var                            shift and go to state 17

state 45

    (27) bloque -> { . bloque1 }
    (28) bloque1 -> . estatuto bloque1
    (29) bloque1 -> .
    (30) estatuto -> . catchIdAsignacionOrLlamadaFunc asignacionOrLlamadaFunc
    (31) estatuto -> . condicion
    (32) estatuto -> . escritura
    (33) estatuto -> . ciclowhile
    (34) estatuto -> . lectura
    (35) estatuto -> . var
    (36) estatuto -> . metodo5
    (37) catchIdAsignacionOrLlamadaFunc -> . ID nextIde
    (56) condicion -> . SI ( superexpresion leftParentesisCondicion bloque condicion1
    (53) escritura -> . escrituraType ( expresion ) ;
    (62) ciclowhile -> . MIENTRAS parentesisIzqWhile superexpresion parentesisDerWhile bloque
    (61) lectura -> . LEER ( revisaQueExistaID ) ;
    (11) var -> . tipo varNombre varsVector var2 ;
    (135) metodo5 -> . REGRESA expresion ;
    (54) escrituraType -> . IMPRIMIR
    (55) escrituraType -> . IMPRIMIRSALTO
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    }               reduce using rule 29 (bloque1 -> .)
    ID              shift and go to state 59
    SI              shift and go to state 57
    MIENTRAS        shift and go to state 68
    LEER            shift and go to state 62
    REGRESA         shift and go to state 64
    IMPRIMIR        shift and go to state 65
    IMPRIMIRSALTO   shift and go to state 60
    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14

    tipo                           shift and go to state 11
    checkClassExistance            shift and go to state 15
    bloque1                        shift and go to state 53
    lectura                        shift and go to state 54
    metodo5                        shift and go to state 67
    condicion                      shift and go to state 55
    catchIdAsignacionOrLlamadaFunc shift and go to state 56
    ciclowhile                     shift and go to state 58
    escritura                      shift and go to state 61
    escrituraType                  shift and go to state 63
    estatuto                       shift and go to state 66
    var                            shift and go to state 69

state 46

    (1) programa -> firstQuadruple clases scopeGlobal vars funciones PROGRAMA scopePrograma bloque .

    $end            reduce using rule 1 (programa -> firstQuadruple clases scopeGlobal vars funciones PROGRAMA scopePrograma bloque .)


state 47

    (17) funcion -> FUNCION tipo nombreFuncion ( . metodo2 agregaFirma bloque
    (130) metodo2 -> . tipo nombreParametro metodo21
    (131) metodo2 -> .
    (20) tipo -> . ENTERO
    (21) tipo -> . FLOTANTE
    (22) tipo -> . TEXTO
    (23) tipo -> . BOLEANO
    (24) tipo -> . checkClassExistance
    (25) tipo -> . VACIO
    (26) checkClassExistance -> . ID

    )               reduce using rule 131 (metodo2 -> .)
    ENTERO          shift and go to state 12
    FLOTANTE        shift and go to state 18
    TEXTO           shift and go to state 19
    BOLEANO         shift and go to state 16
    VACIO           shift and go to state 14
    ID              shift and go to state 13

    metodo2                        shift and go to state 70
    tipo                           shift and go to state 71
    checkClassExistance            shift and go to state 15

state 48

    (12) varsVector -> [ CTE_ENTERO ] .

    ,               reduce using rule 12 (varsVector -> [ CTE_ENTERO ] .)
    ;               reduce using rule 12 (varsVector -> [ CTE_ENTERO ] .)


state 49

    (14) var2 -> , varNombre . varsVector var2
    (12) varsVector -> . [ CTE_ENTERO ]
    (13) varsVector -> .

    [               shift and go to state 33
    ,               reduce using rule 13 (varsVector -> .)
    ;               reduce using rule 13 (varsVector -> .)

    varsVector                     shift and go to state 72

state 50

    (11) var -> tipo varNombre varsVector var2 ; .

    ENTERO          reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    FLOTANTE        reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    TEXTO           reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    BOLEANO         reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    VACIO           reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    ID              reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    FUNCION         reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    }               reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    SI              reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    MIENTRAS        reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    LEER            reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    REGRESA         reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    IMPRIMIR        reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    IMPRIMIRSALTO   reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)
    PROGRAMA        reduce using rule 11 (var -> tipo varNombre varsVector var2 ; .)


state 51

    (124) clase -> CLASE nombreClase clase1 { public } ; .

    CLASE           reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    ENTERO          reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    FLOTANTE        reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    TEXTO           reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    BOLEANO         reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    VACIO           reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    ID              reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    FUNCION         reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)
    PROGRAMA        reduce using rule 124 (clase -> CLASE nombreClase clase1 { public } ; .)


state 52

    (128) public -> PUBLICO : vars . funciones
    (9) funciones -> . funcion funciones
    (10) funciones -> .
    (17) funcion -> . FUNCION tipo nombreFuncion ( metodo2 agregaFirma bloque

    }               reduce using rule 10 (funciones -> .)
    FUNCION         shift and go to state 23

    funcion                        shift and go to state 24
    funciones                      shift and go to state 73

state 53

    (27) bloque -> { bloque1 . }

    }               shift and go to state 74


state 54

    (34) estatuto -> lectura .

    ID              reduce using rule 34 (estatuto -> lectura .)
    SI              reduce using rule 34 (estatuto -> lectura .)
    MIENTRAS        reduce using rule 34 (estatuto -> lectura .)
    LEER            reduce using rule 34 (estatuto -> lectura .)
    REGRESA         reduce using rule 34 (estatuto -> lectura .)
    IMPRIMIR        reduce using rule 34 (estatuto -> lectura .)
    IMPRIMIRSALTO   reduce using rule 34 (estatuto -> lectura .)
    ENTERO          reduce using rule 34 (estatuto -> lectura .)
    FLOTANTE        reduce using rule 34 (estatuto -> lectura .)
    TEXTO           reduce using rule 34 (estatuto -> lectura .)
    BOLEANO         reduce using rule 34 (estatuto -> lectura .)
    VACIO           reduce using rule 34 (estatuto -> lectura .)
    }               reduce using rule 34 (estatuto -> lectura .)


state 55

    (31) estatuto -> condicion .

    ID              reduce using rule 31 (estatuto -> condicion .)
    SI              reduce using rule 31 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 31 (estatuto -> condicion .)
    LEER            reduce using rule 31 (estatuto -> condicion .)
    REGRESA         reduce using rule 31 (estatuto -> condicion .)
    IMPRIMIR        reduce using rule 31 (estatuto -> condicion .)
    IMPRIMIRSALTO   reduce using rule 31 (estatuto -> condicion .)
    ENTERO          reduce using rule 31 (estatuto -> condicion .)
    FLOTANTE        reduce using rule 31 (estatuto -> condicion .)
    TEXTO           reduce using rule 31 (estatuto -> condicion .)
    BOLEANO         reduce using rule 31 (estatuto -> condicion .)
    VACIO           reduce using rule 31 (estatuto -> condicion .)
    }               reduce using rule 31 (estatuto -> condicion .)


state 56

    (30) estatuto -> catchIdAsignacionOrLlamadaFunc . asignacionOrLlamadaFunc
    (40) asignacionOrLlamadaFunc -> . llamadaFuncion
    (41) asignacionOrLlamadaFunc -> . asignacion
    (42) llamadaFuncion -> . verificarProc parametrosLlamada ) ;
    (48) asignacion -> . revisaQueExistaID asignacion1 = expresion ;
    (43) verificarProc -> . (
    (49) revisaQueExistaID -> .

    (               shift and go to state 76
    [               reduce using rule 49 (revisaQueExistaID -> .)
    =               reduce using rule 49 (revisaQueExistaID -> .)

    asignacionOrLlamadaFunc        shift and go to state 77
    llamadaFuncion                 shift and go to state 78
    verificarProc                  shift and go to state 75
    revisaQueExistaID              shift and go to state 79
    asignacion                     shift and go to state 80

state 57

    (56) condicion -> SI . ( superexpresion leftParentesisCondicion bloque condicion1

    (               shift and go to state 81


state 58

    (33) estatuto -> ciclowhile .

    ID              reduce using rule 33 (estatuto -> ciclowhile .)
    SI              reduce using rule 33 (estatuto -> ciclowhile .)
    MIENTRAS        reduce using rule 33 (estatuto -> ciclowhile .)
    LEER            reduce using rule 33 (estatuto -> ciclowhile .)
    REGRESA         reduce using rule 33 (estatuto -> ciclowhile .)
    IMPRIMIR        reduce using rule 33 (estatuto -> ciclowhile .)
    IMPRIMIRSALTO   reduce using rule 33 (estatuto -> ciclowhile .)
    ENTERO          reduce using rule 33 (estatuto -> ciclowhile .)
    FLOTANTE        reduce using rule 33 (estatuto -> ciclowhile .)
    TEXTO           reduce using rule 33 (estatuto -> ciclowhile .)
    BOLEANO         reduce using rule 33 (estatuto -> ciclowhile .)
    VACIO           reduce using rule 33 (estatuto -> ciclowhile .)
    }               reduce using rule 33 (estatuto -> ciclowhile .)


state 59

    (37) catchIdAsignacionOrLlamadaFunc -> ID . nextIde
    (26) checkClassExistance -> ID .
    (38) nextIde -> . . ID
    (39) nextIde -> .

    ID              reduce using rule 26 (checkClassExistance -> ID .)
    .               shift and go to state 83
    (               reduce using rule 39 (nextIde -> .)
    [               reduce using rule 39 (nextIde -> .)
    =               reduce using rule 39 (nextIde -> .)

    nextIde                        shift and go to state 82

state 60

    (55) escrituraType -> IMPRIMIRSALTO .
